--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
                             }, function(data, status) {
 
                                 if (status === 'success') {
-                                    sessionInfo()
+                                    // sessionInfo()
                                     recapthatoken = data
                                 }
                             }).fail(function(jqXHR, textStatus, errorThrown) {
