--- a/register.html
+++ b/register.html
@@ -67,6 +67,7 @@
 
                                 if (status === 'success') {
                                     // sessionInfo()
+                                    next()
                                     recapthatoken = data
                                 }
                             }).fail(function(jqXHR, textStatus, errorThrown) {
