--- a/register.html
+++ b/register.html
@@ -190,7 +190,7 @@
             t = t + "   </div>"
             t = t + " <div class=\"form-group-flex\">"
             t = t + "     <div class=\"form-group\">"
-            t = t + "         <input type=\"text\" name=\"code\"class \"code\" id=\"code\" placeholder=\"Code\" />"
+            t = t + "         <input type=\"text\" name=\"code\" class=\"code\" id=\"code\" placeholder=\"Code\" />"
             t = t + "     </div>"
             t = t + "  </div>"
             t = t + "</div>"
