--- a/register.html
+++ b/register.html
@@ -17,7 +17,6 @@
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
@@ -195,13 +194,9 @@
             t = t + " <fieldset>"
             t = t + "   <div class=\"form-row\">"
             t = t + "       <div class=\"form-file\">"
-            t = t + "           <input type=\"file\" class=\"inputfile\" name=\"your_picture\" id=\"your_picture\" onchange=\"readURL(this);\" data-multiple-caption=\"{count} files selected\" multiple />"
-            t = t + "           <label for=\"your_picture\">"
-            t = t + "           <figure>"
-            t = t + "               <img src=\"images/your-picture.png\" alt=\"\" class=\"your_picture_image\">"
-            t = t + "           </figure>"
 
-            t = t + "       </label>"
+            t = t + "  <img src=\"images/afrigebeta.jpg\" alt=\"\" class=\"your_picture_image\">"
+
             t = t + "   </div>"
             t = t + " <div class=\"form-group-flex\">"
             t = t + "     <div class=\"form-group\">"
@@ -224,18 +219,13 @@
     <div class="main">
 
         <div class="container">
-            <h2>Build your profile</h2>
+            <h2>Register</h2>
+
             <div class="formposition">
                 <fieldset>
                     <div class="form-row">
                         <div class="form-file">
-                            <input type="file" class="inputfile" name="your_picture" id="your_picture" onchange="readURL(this);" data-multiple-caption="{count} files selected" multiple />
-                            <label for="your_picture">
-                            <figure>
-                                <img src="images/your-picture.png" alt="" class="your_picture_image">
-                            </figure>
-        
-                        </label>
+                            <img src="images/afrigebeta.jpg" alt="" class="your_picture_image">
                         </div>
                         <div class="form-group-flex">
                             <div class="form-group">
@@ -264,8 +254,9 @@
                     </div>
                 </fieldset>
             </div>
-            <button id="sendCode" style="display: none;">Next</button>"
-            <button id="sendotp" style="display: none;" onclick="sendOTP()">Sign Up</button>
+            <button id="sendCode" type="button" class="buttons" style="display: none;">Next</button>
+            <button id="sendotp" type="button" class="buttons" style="display: none;" onclick="sendOTP()">Sign Up</button>
+
         </div>
 
     </div>
