--- a/Orders.html
+++ b/Orders.html
@@ -85,6 +85,10 @@
             window.location.href = "menu.html";
         }
 
+        function logout() {
+            localStorage.setItem('storeid', "");
+            window.location.href = "login.html";
+        }
 
         function clicked(page) {
 
@@ -302,7 +306,7 @@
 
                                 <a class="dropdown-item" href="profile.html">Profile</a>
                                 <a class="dropdown-item" href="Orders.html">Orders</a>
-                                <a class="dropdown-item" href="stuff.html">logout</a>
+                                <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
                         </li>
 
@@ -461,7 +465,7 @@
         </div>
         <a href="#" onclick="loaddata()" data-toggle="modal" data-target="#exampleModal" class="float">
             <i class="fa fa-shopping-cart my-float"></i>
-            </a>
+        </a>
         <div class="copyright">
             <div class="container">
                 <div class="row">
