--- a/about.html
+++ b/about.html
@@ -36,7 +36,10 @@
             window.location.href = "menu.html";
         }
 
-
+        function logout() {
+            localStorage.setItem('storeid', "");
+            window.location.href = "login.html";
+        }
         $(document).ready(function() {
 
             $('#username').text(localStorage.getItem('username'));
@@ -89,7 +92,7 @@
                             <div class="dropdown-menu" aria-labelledby="dropdown-a">
                                 <a class="dropdown-item" href="profile.html">Profile</a>
                                 <a class="dropdown-item" href="myaccount.html">Orders</a>
-                                <a class="dropdown-item" href="stuff.html">logout</a>
+                                <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -105,7 +108,7 @@
     <!-- End header -->
     <a href="#" onclick="loaddata()" data-toggle="modal" data-target="#exampleModal" class="float">
         <i class="fa fa-shopping-cart my-float"></i>
-        </a>
+    </a>
     <!-- Start header -->
     <div class="all-page-title page-breadcrumb">
         <div class="container text-center">
