--- a/main.html
+++ b/main.html
@@ -150,9 +150,14 @@
             localStorage.setItem('storeid', i);
             window.location.href = "menu.html";
         }
+
+        function logout() {
+            localStorage.setItem('storeid', "");
+            window.location.href = "login.html";
+        }
     </script>
 
-
+    10000365847518
 
 </head>
 
@@ -179,7 +184,7 @@
                                 <a class="dropdown-item" href="reservation.html">My Account</a>
                                 <a class="dropdown-item" href="myaccount.html">Profile</a>
                                 <a class="dropdown-item" href="myaccount.html">Orders</a>
-                                <a class="dropdown-item" href="stuff.html">logout</a>
+                                <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
                         </li>
                     </ul>
