--- a/menu.html
+++ b/menu.html
@@ -307,6 +307,11 @@
             window.location.href = "menu.html";
         }
 
+        function logout() {
+            localStorage.setItem('storeid', "");
+            window.location.href = "login.html";
+        }
+
         function searchsubcath(cathname, subcathname, page) {
 
 
@@ -829,7 +834,7 @@
 
                                 <a class="dropdown-item" href="profile.html">Profile</a>
                                 <a class="dropdown-item" href="Orders.html">Orders</a>
-                                <a class="dropdown-item" href="stuff.html">logout</a>
+                                <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
                         </li>
 
@@ -847,7 +852,7 @@
 
     <a href="#" onclick="loaddata()" data-toggle="modal" data-target="#exampleModal" class="float">
         <i class="fa fa-shopping-cart my-float"></i>
-        </a>
+    </a>
     <!-- Start All Pages -->
     <div class="all-page-title page-breadcrumb">
         <div class="container text-center">
