--- a/profile.html
+++ b/profile.html
@@ -61,6 +61,10 @@
             window.location.href = "menu.html";
         }
 
+        function logout() {
+            localStorage.setItem('storeid', "");
+            window.location.href = "login.html";
+        }
 
         $(document).ready(function() {
 
@@ -305,7 +309,7 @@
 
                                 <a class="dropdown-item" href="profile.html">Profile</a>
                                 <a class="dropdown-item" href="myaccount.html">Orders</a>
-                                <a class="dropdown-item" href="stuff.html">logout</a>
+                                <a class="dropdown-item" onclick="logout()" href="#">logout</a>
 
                             </div>
                         </li>
