--- a/login.html
+++ b/login.html
@@ -50,8 +50,8 @@
 
 
         $(document).ready(function() {
-
-            //userregister
+            console.log(localStorage.getItem('storeid'))
+                //userregister
             document.addEventListener('click', function(e) {
                 e.preventDefault()
                 if (e.target && e.target.id == 'loginbutton') {
