--- a/menu.html
+++ b/menu.html
@@ -308,7 +308,7 @@
         }
 
         function logout() {
-            localStorage.setItem('storeid', "");
+            localStorage.setItem('logout', "this");
             window.location.href = "login.html";
         }
 
