--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         }
 
         function logout() {
-            localStorage.setItem('storeid', "");
+            localStorage.setItem('token', "this");
             window.location.href = "login.html";
         }
         $(document).ready(function() {
