--- a/menu.html
+++ b/menu.html
@@ -766,7 +766,7 @@
 
 <body>
 
-    <!-- Modal -->
+    <!-- Modal as-->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
