--- a/profile.html
+++ b/profile.html
@@ -62,7 +62,7 @@
         }
 
         function logout() {
-            localStorage.setItem('storeid', "");
+            localStorage.setItem('token', "this");
             window.location.href = "login.html";
         }
 
