--- a/Orders.html
+++ b/Orders.html
@@ -86,7 +86,7 @@
         }
 
         function logout() {
-            localStorage.setItem('storeid', "");
+            localStorage.setItem('token', "this");
             window.location.href = "login.html";
         }
 
@@ -309,12 +309,13 @@
                                 <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
                         </li>
-
+                        <!--
                         <li class="nav-item" style="margin-left: 10px;">
                             <a class="nav-link" href="menu.html">
                                 <a href="#" style="font-size:24px"> <i class="fa fa-shopping-cart"></i></button>
                                 </a>
                         </li>
+                        -->
                     </ul>
                 </div>
             </div>
