--- a/register.html
+++ b/register.html
@@ -248,7 +248,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="password" id="password" placeholder="password" />
+                                <input type="password" name="password" id="password" placeholder="password" />
                             </div>
                         </div>
                     </div>
