--- a/menu.html
+++ b/menu.html
@@ -744,7 +744,7 @@
 
     <!-- Site Icons -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/logo.jpg">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="images/afrigebeta.jpg">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
