--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
 
     <!-- Site Icons -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/logo.jpg">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="images/afrigebeta.jpg">
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
