--- a/register.html
+++ b/register.html
@@ -18,7 +18,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <!-- Site Icons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logo.jpg">
+    <link rel="apple-touch-icon" href="images/afrigebeta.jpg">
 
     <script>
         let firstname = ""
