--- a/register.html
+++ b/register.html
@@ -142,8 +142,14 @@
                 else return false
             }
 
+            function inpassempty() {
 
-            $("input[type='text']").on("input", function() {
+            }
+
+
+
+
+            $("input").keypress(function() {
                 if (isEmpty(document.getElementById("first_name").value) == false &&
                     isEmpty(document.getElementById("last_name").value) == false &&
                     isEmpty(document.getElementById("username").value) == false &&
@@ -153,7 +159,7 @@
                     isEmpty(document.getElementById("age").value) == false) {
                     // if (validatePhone(document.getElementById("phoneNumber").value) == true && validateAge(document.getElementById("age").value) == true) {
                     //     //now disable the button
-
+                    console.log("empty")
                     phone = document.getElementById("phoneNumber").value
                     firstname = document.getElementById("first_name").value
                     lastname = document.getElementById("last_name").value
@@ -215,7 +221,7 @@
 
 </head>
 
-<body onload="init()">
+<body>
     <div id="re-container"></div>
 
     <div class="main">
@@ -250,7 +256,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="password" name="password" id="password" placeholder="password" />
+                                <input type="text" name="password" id="password" placeholder="password" />
                             </div>
                         </div>
                     </div>
