--- a/register.html
+++ b/register.html
@@ -30,6 +30,7 @@
         let password = ""
         let email = ""
         let age = ""
+
         let city = ""
         let code = ""
         let recapthatoken = ""
@@ -70,6 +71,7 @@
                                 lastname: lastname,
                                 password: password,
                                 age: age,
+                                email: email,
                                 city: city,
 
 
@@ -160,6 +162,9 @@
                     // if (validatePhone(document.getElementById("phoneNumber").value) == true && validateAge(document.getElementById("age").value) == true) {
                     //     //now disable the button
                     console.log("empty")
+                    if (isEmpty(document.getElementById("email").value) == false) {
+                        email = document.getElementById("age").value
+                    }
                     phone = document.getElementById("phoneNumber").value
                     firstname = document.getElementById("first_name").value
                     lastname = document.getElementById("last_name").value
@@ -242,6 +247,12 @@
                             <div class="form-group">
                                 <input type="text" name="last_name" id="last_name" placeholder="Last Name" />
                             </div>
+
+                            <div class="form-group">
+                                <input type="text" name="email" id="email" placeholder="email" />
+                            </div>
+
+
                             <div class="form-group">
                                 <input type="text" name="username" id="username" placeholder="username" />
                             </div>
@@ -252,7 +263,7 @@
                                 <input type="text" name="phone" id="phoneNumber" placeholder="phone" />
                             </div>
                             <div class="form-group">
-                                <input type="text" name="age" id="age" placeholder="age" />
+                                <input type="number" name="age" id="age" placeholder="age" />
                             </div>
 
                             <div class="form-group">
