--- a/register.html
+++ b/register.html
@@ -288,12 +288,12 @@
                                     <div id="input-wrapper">
 
                                         <label for="pno">+251</label>
-                                        <input type="number" name="pno" id="pno" tabindex="1" class="form-control" maxlength="9" placeholder="Phone Number" />
+                                        <input type="number" name="pno" id="pno" tabindex="1" class="form-control" maxlength="9" size="9" placeholder="Phone Number" />
                                         <br><br><br>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="number" name="age" id="age" maxlength="2" placeholder="age" />
+                                    <input type="number" name="age" id="age" maxlength="2" size="2" placeholder="age" />
                                 </div>
 
                                 <div class="form-group">
