--- a/register.html
+++ b/register.html
@@ -285,7 +285,7 @@
 
                                 <div class="form-group">
                                     <!-- <input type="text" name="city" id="city" placeholder="City" /> -->
-                                    <select name="city" aria-placeholder="Select City" class="form-control">
+                                    <select name="city" id="city" aria-placeholder="Select City" class="form-control">
                                         <option disabled selected hidden> Select City</option>
                                            <option value='sheger'>Addis Ababa</option>
                                         <option value='adama'>Adama</option>
